# socketed

./: ChangeLog.md  Main.hs  README.md  Socketed.hs  SocketedMD.hs  Webpipe.hs  index.html  socketed.cabal  stack.yaml  webpipe.cabal
ficketed/: LICENSE  Main.hs  README.md  ficketed.cabal
ficketed/Network/Socketed/Application/: Ficketed.hs
ficketed/Network/Socketed/Application/Ficketed/: Internal.hs  Template.hs
plocketed/: Main.hs  README.md  plocketed.cabal
plocketed/Network/Socketed/Application/: Plocketed.hs
plocketed/Network/Socketed/Application/Plocketed/: Internal.hs  Template.hs
socketed/: Main.hs  README.md  backup.html  socketed.cabal
socketed/Network/: Socketed.hs
socketed/Network/Socketed/: Internal.hs  Template.hs
