name: socketed
version: 0.1.0.0

synopsis: simpe tool to serve piped data over http and websocket
description: simpe tool to serve piped data over http and websocket

license: MIT
license-file: LICENSE
author: sen.cenan@gmail.com
maintainer: sen.cenan@gmail.com
-- copyright:

category: Web
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

executable socketed
  main-is: Main.hs
  build-depends:
    base >=4.9 && <4.10,
    bytestring >= 0.10.8.1,
    websockets >= 0.10.0.0,
    conduit-combinators >= 1.1.1,
    conduit-extra >= 1.1.15,
    http-types >= 0.9.1,
    warp >= 3.2.11.1,
    text >= 1.2.2.1,
    async >= 2.1.1,
    wai >= 3.2.1.1,
    wai-websockets >= 3.0.1.1,
    stm >= 2.4.4.1,
    stm-chans >= 3.0.0.4,
    stm-conduit >= 3.0.0,
    optparse-applicative == 0.13.2.0
  default-language: Haskell2010
  ghc-options: -threaded

executable socketedmd
  main-is: SocketedMD.hs
  default-language: Haskell2010
  build-depends:
    base >=4.9 && <4.10,
    binary >= 0.8.3.0,
    bytestring >= 0.10.8.1,
    directory >= 1.2.6.2,
    mime-types >= 0.1.0.7,
    text >= 1.2.2.1,
    blaze-html >= 0.9.0.1,
    http-types >= 0.9.1,
    wai >= 3.2.1.1,
    wai-app-static >= 3.1.6.1,
    warp >= 3.2.11.1
  ghc-options: -threaded
