name: webpipe
version: 0.1.0.0

synopsis: simpe tool to serve piped data over http and websocket
description: simpe tool to serve piped data over http and websocket

license: MIT
license-file: LICENSE
author: sen.cenan@gmail.com
maintainer: sen.cenan@gmail.com
-- copyright:

category: Web
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

executable webpipe
  main-is: Webpipe.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    bytestring >= 0.10.8.1,
    websockets >= 0.10.0.0,
    conduit >= 1.2.6.6,
    conduit-extra >= 1.1.13.2,
    wai >= 3.2.1.1,
    http-types >= 0.9.1,
    warp >= 3.2.11.1,
    text >= 1.2.2.1
  -- hs-source-dirs:
  default-language: Haskell2010
