name: ficketed
version: 0.1.0.0

synopsis: update statically hosted file in a push stule through socketed
description: update statically hosted file in a push stule through socketed

license: MIT
license-file: LICENSE
author: sen.cenan@gmail.com
maintainer: sen.cenan@gmail.com

category: Web
build-type: Simple
cabal-version: >=1.10

executable ficketed
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base >=4.9 && <4.10,
    binary >= 0.8.3.0,
    bytestring >= 0.10.8.1,
    directory >= 1.2.6.2,
    mime-types >= 0.1.0.7,
    text >= 1.2.2.1,
    blaze-html >= 0.9.0.1,
    http-types >= 0.9.1,
    wai >= 3.2.1.1,
    wai-app-static >= 3.1.6.1,
    warp >= 3.2.11.1
  ghc-options: -threaded
  other-modules: Network.Socketed.Application.Ficketed
